# krokiwiz

./: .gitignore  Dockerfile  LICENSE  README.md  build_docker.sh  krokiwiz.py  pyproject.toml
helm/krokiwiz/: Chart.yaml  values.yaml
helm/krokiwiz/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/krokiwiz/templates/tests/: test-connection.yaml
